# rag-pipeline-from-scratch

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  api.py  chunk_experiment.py  config.py  config.yaml  generate.py  ingest.py  pipeline.py  pyproject.toml  rag-pipeline-from-scratch.md  requirements.txt  retrieve.py  seed_corpus.py
.github/workflows/: test.yml
data/: corpus_manifest.json  test_set.json
docs/: engineering.md  failures.md  product.md  setup.md  tradeoffs.md
evaluation/: eval.py
tests/: test_chunking.py  test_config.py
